# portfolio-api

./: api.py  main.py  projectgrabber.py  test.py
static/projects/Earwig Pastebin API/cache/: docs.json
static/projects/Earwig Pastebin API/root/: EWEngine.db  README.md  _boot_.py  earwig.py  makefile  settings.EWS
static/projects/Earwig Web Framework/: body.html
static/projects/Earwig Web Framework/cache/: docs.json  project.json
static/projects/Earwig Web Framework/docs/: 1.Getting Started.md  2.Configuring Your Server Settings and Globals.md  3.Framework Globals and Accessables.md  4.Framework Functions.md  5.Auth Tokens.md  6.Earwig HTML Renderer.md
static/projects/Earwig Web Framework/root/: README.md  earwig.py  settings.EWS
static/projects/Fulcrum/cache/: docs.json  project.json
static/projects/Fulcrum/docs/: 1.Getting Started.md  2.Non Traditional Functionalities.md  3.Language Keywords And Syntax.md  4.Functions.md  5.Example Program.md
static/projects/Fulcrum/root/: Cargo.toml  LICENSE  README.md
static/projects/Neat Object Notation/: body.html
static/projects/Neat Object Notation/cache/: docs.json  project.json
static/projects/Neat Object Notation/docs/: 1.Getting Started.md  2.Labeled and Unlabeled Structures.md  3.Modules.md  4.Auto Increment.md  (+2 more)
static/projects/Neat Object Notation/root/: Cargo.toml  README.md
static/projects/Neat Object Notation/root/src/: lib.rs  main.rs
static/projects/Neat Object Notation/root/src/neat/: datatypes.rs  treebuilder.rs
static/projects/Neat Object Notation/root/tests/: config.neat  output.json
(+40 files in other folders)
