[package]
name = "Neat"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
indexmap = "1.9.1"
serde_json = {version = "1.0", features = ["preserve_order"]}
libc = "0.2.137"

[lib]
name = "neat_lib"
path = "src/lib.rs"
crate-type = ["dylib"]